[DevTools] Ensure that tab agent hosts get "page" type

If we were to create DevToolsAgentHost for a WebContents
before appending that to a tab strip, we wrongly assigned
"other" type to it. This happens, for example, when devtools
is discovering all agent hosts for newly created web contents.

Regressed in crrev.com/8527a7346f94d1bbda70dbe1f6c41d65d85ed9c3 [formerly 7a0e557c4434a838ab29021ae039504fbab4f564]

BUG=717003

Review-Url: https://codereview.chromium.org/2858763002
Cr-Commit-Position: refs/heads/master@{#468815}

Former-commit-id: 16fd697aa90b4a2dd30ff37ae51fd52a7c157a98