chrome/browser/devtools/chrome_devtools_manager_delegate.cc
@@ -365,7 +365,7 @@ std::string ChromeDevToolsManagerDelegate::GetTargetType(
   std::string extension_name;
   std::string extension_type;
   if (!GetExtensionInfo(host, &extension_name, &extension_type))
-    return DevToolsAgentHost::kTypeOther;
+    return std::string();
   return extension_type;
 }
 
