chrome/browser/devtools/devtools_sanity_browsertest.cc
@@ -1843,6 +1843,23 @@ IN_PROC_BROWSER_TEST_F(DevToolsSanityTest, AutoAttachToWindowOpen) {
   CloseDevToolsWindow();
 }
 
+IN_PROC_BROWSER_TEST_F(DevToolsSanityTest, SecondTabAfterDevTools) {
+  OpenDevToolsWindow(kDebuggerTestPage, true);
+
+  ui_test_utils::NavigateToURLWithDisposition(
+      browser(), spawned_test_server()->GetURL(kDebuggerTestPage),
+      WindowOpenDisposition::NEW_FOREGROUND_TAB,
+      ui_test_utils::BROWSER_TEST_WAIT_FOR_TAB |
+          ui_test_utils::BROWSER_TEST_WAIT_FOR_NAVIGATION);
+  WebContents* second = browser()->tab_strip_model()->GetActiveWebContents();
+
+  scoped_refptr<content::DevToolsAgentHost> agent(
+      content::DevToolsAgentHost::GetOrCreateFor(second));
+  EXPECT_EQ("page", agent->GetType());
+
+  CloseDevToolsWindow();
+}
+
 IN_PROC_BROWSER_TEST_F(WorkerDevToolsSanityTest, InspectSharedWorker) {
   RunTest("testSharedWorker", kSharedWorkerTestPage, kSharedWorkerTestWorker);
 }
